# rust-restapi-example

./: Cargo.toml  Rust-RestApi-Test.postman_collection.json  run-postgres.sh
src/: db.rs  main.rs  schema.rs
src/post/: mod.rs  model.rs
src/user/: auth.rs  mod.rs  model.rs
