[package]
name = "rust-restapi-test"
version = "0.1.0"
authors = ["Maxim Fischuk"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.2", features = ["postgres"] }
jsonwebtoken = "5.0.1"
rust-argon2 = "0.5.1"
dotenv = "0.14.1"
blake2  = "0.8.1"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]
